Fixed footer positioning on tablets and mobile devices

--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -53,7 +53,11 @@ html {
 	width: 100%;
 	margin-bottom: 2rem;
 }
-#footer #footer-pages, #footer #footer-contact-links {
+#footer #footer-contact-links {
+	margin-top: auto;
+}
+#footer #footer-pages,
+#footer #footer-contact-links {
 	width: 50%;
 }
 
